--- a/src/main/resources/templates/landing.html
+++ b/src/main/resources/templates/landing.html
@@ -373,7 +373,7 @@
 
 <footer class="text-center text-white" style="background-color: #f1f1f1;">
     <!-- Grid container -->
-    <div class="container pt-4">
+    <div class="container">
         <!-- Section: Social media -->
         <!-- Facebook -->
         <a
