--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -45,6 +45,18 @@
                 <label for="email" class="form-label">Email</label>
                 <input type="email" class="form-control" placeholder="Email" id="email" name="email" th:field="*{email}"/>
               </div>
+              <div class="mb-3">
+                <label for="firstName" class="form-label">First Name</label>
+                <input type="text" class="form-control" placeholder="First Name" id="firstName" name="firstName" th:field="*{firstName}"/>
+              </div>
+              <div class="mb-3">
+                <label for="lastName" class="form-label">Last Name</label>
+                <input type="text" class="form-control" placeholder="Last Name" id="lastName" name="lastName" th:field="*{lastName}"/>
+              </div>
+              <div class="mb-3">
+                <label for="bio" class="form-label">Bio</label>
+                <textarea type="text" class=form-control" placeholder="Tell us about you.." id="bio" name="bio" th:field="*{bio}"></textarea>
+              </div>
               <input type="hidden" name="roles" id="roles" value="ROLE_USER" th:field="*{roles}"/>
             </div>
             <div class="d-flex justify-content-evenly">
