--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -56,7 +56,7 @@
                             </div>
                             <div class="mb-3">
                                 <label for="bio" class="form-label">Bio</label>
-                                <textarea type="text" class=form-control" placeholder="Tell us about you.." id="bio"
+                                <textarea class="form-control" placeholder="Tell us about you.." id="bio"
                                           name="bio" th:field="*{bio}"></textarea>
                             </div>
                             <input type="hidden" name="roles" id="roles" value="ROLE_USER" th:field="*{roles}"/>
