fixed admin deletePath route removed /

--- a/src/main/resources/templates/users/path.html
+++ b/src/main/resources/templates/users/path.html
@@ -18,7 +18,10 @@
         <div class="col-6"></div>
         <div class="col-2">
             <form th:action="@{/paths/enroll/{id}(id=${path.id})}" method="post">
-                    <button type="submit" th:text="${me.followed_paths.contains(path) ? 'Drop Path' : 'Follow Path'}" th:attr="class=${me.followed_paths.contains(path) ? 'btn btn-danger' : 'btn btn-success'}">
+                    <button type="submit" th:attr="class=${me.followed_paths.contains(path) ? 'btn btn-danger' : 'btn btn-success'}">
+                        <i class="bi bi-plus-square" th:if="${!me.followed_paths.contains(path)}"></i>
+                        <i class="bi bi-trash3-fill" th:if="${me.followed_paths.contains(path)}"></i>
+                    </button>
             </form>
         </div>
         <hr class="thicker_hr"/>
