--- a/src/main/resources/templates/users/path.html
+++ b/src/main/resources/templates/users/path.html
@@ -11,7 +11,7 @@
 <body>
 <th:block th:replace="~{fragments/navbar.html :: navbar}"></th:block>
 <div class="container bg-light rounded my-5 pt-3">
-    <div class="row">
+    <div class="row p-2">
         <div class="col-4">
             <h1 th:text="${path.title}"></h1>
         </div>
@@ -26,7 +26,7 @@
         </div>
         <hr class="thicker_hr"/>
     </div>
-    <div class="row">
+    <div class="row p-2">
         <div class="col-3">
             <img src="#" th:src="'data:image/jpeg;base64,'+${path.imageDataUrl}" alt="Achievement Badge" width="256px" height="256px" class="path_image img img-thumbnail">
         </div>
@@ -34,7 +34,7 @@
             <div th:text="${path.description}"/>
         </div>
     </div>
-    <div class="row" th:if="${me.followed_paths.contains(path)}">
+    <div class="row p-2" th:if="${me.followed_paths.contains(path)}">
         <div class="col-3">
             <div th:text="'Total Points for this path= ' + ${points}"/>
         </div>
