fixed admin deletePath route removed /

--- a/src/main/resources/templates/users/path.html
+++ b/src/main/resources/templates/users/path.html
@@ -43,9 +43,7 @@
             <div th:text="'Earn up to ' + ${points} + ' health points by completing this path.'"/>
         </div>
         <div th:each="challenge : ${path.challenges}" class="row mb-3">
-            <th:block th:with="challengenum=${path.challenges.indexOf(challenge) + 1}">
-                <div class="challengeTitle m-2" th:text="${'Challenge ' + challengenum  + ' - '}${challenge.title}"/>
-            </th:block>
+            <div class="challengeTitle m-2" th:text="${'Challenge ' + challenge.challengeNumber  + ' - '}${challenge.title}"/>
             <div class="m-2" th:text="${challenge.description}"/>
             <!--                <ul th:each="item : ${challenge.exercises}">-->
             <!--                    <li>-->
