--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -1,6 +1,6 @@
 #chat_icon{
     color: red;
-    position: absolute;
+    position: fixed;
     bottom: 40px;
     right: 30px;
     width: 48px;
@@ -8,6 +8,7 @@
     font-size: xx-large;
     animation: glow 3s forwards infinite alternate;
     transition: all 3s;
+    z-index: 100000;
 }
 
 @keyframes glow {
@@ -34,6 +35,7 @@
     width: 1px;
     height: 1px;
     max-width: 350px;
+    z-index: 10000;
 }
 
 #incoming_messages{
