--- a/src/main/resources/templates/users/landing.html
+++ b/src/main/resources/templates/users/landing.html
@@ -18,7 +18,8 @@
     </div>
     <div class="row" style="padding-top: 50px">
         <div class="h6 ps-3">
-            <span th:unless="${user.lastName == null or user.firstName == null}" th:text="${user.firstName + ' ' + user.lastName + ' (aka. ' + user.username + ')'}"/>
+            <span th:unless="${user.lastName == null or user.firstName == null}" th:text="${user.firstName + ' ' + user.lastName}"/>
+
             <span th:if="${user.lastName == null or user.firstName == null}">What's your name? <a href="profile/settings">Set Now</a></span>
 
             <!--If the user hasn't set their first and last name then display their username-->
@@ -26,6 +27,9 @@
 
             <!-- Points section -->
             <span th:unless="${user.totalPoints == null}" th:text="' | Total Health Points: ' + ${user.totalPoints}" />
+
+            <br/>
+            <span th:text="' (aka. ' + ${user.username} + ')'"></span>
         </div>
 
         <!-- Profile image -->
@@ -45,19 +49,80 @@
         </div>
     </div>
 
-    <div class="container" th:if="${user.followed_paths != null}">
-        <h4 class="mt-3">Chosen Paths</h4>
+    <div class="container" th:if="${user.followed_paths.size != 0}">
+        <h4 class="mt-3" th:if="${!completed_paths.containsAll(user.followed_paths)}">Chosen Paths</h4>
         <ul class="list-group mt-3" style="clear: both;">
-            <li class="list-group-item" th:each="item : ${user.followed_paths}" >
-                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
-                <span class="me-auto"><strong th:text="${item.title}"></strong></span>
-                <i class="bi bi-trash3-fill deleteBtn btn btn-warning ms-auto"   th:item="${item.id}" style="float: right;"></i>
+            <li class="list-group-item" th:each="item : ${user.followed_paths}" th:if="${!completed_paths.contains(item)}">
+                <div class="row">
+                    <div class="col-3 col-md-2">
+                        <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
+                        <span class="me-auto"><strong th:text="${item.title}"></strong></span>
+                    </div>
+                    <div class="col-7 col-md-8" >
+                        <div class="progress mt-3" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+                            <div class="progress-bar" th:style="'width:' + ${item.percentDone} + '%'"></div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <form th:action="@{/paths/enroll/{id}(id=${item.id})}" method="post" style="float: right;">
+                            <button type="submit" class="deleteBtn btn btn-warning">
+                                <i class="bi bi-trash3-fill ms-auto" th:item="${item.id}"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
             </li>
             <li class="list-group-item" th:if="${user.followed_paths == null}"><i class="bi bi-info-square me-3"></i>You can find paths to follow in the "All Paths" tab.</li>
         </ul>
-        <th:block th:if="${user.followed_paths.isEmpty}">
+        <th:block th:if="${user.followed_paths.isEmpty()}">
             <i class="bi bi-info-square me-4"></i>You are not following any paths, would you like to <a href="/allPaths">search</a> for one?
         </th:block>
+    </div>
+
+<!--    <div class="container" th:if="${completed_paths != null}">-->
+<!--        <h4 class="mt-3">Your Badges</h4>-->
+<!--        <ul class="list-group mt-3" style="clear: both;" th:if="${completed_paths.size() != 0}">-->
+<!--            <li class="list-group-item" th:each="item : ${completed_paths}" >-->
+<!--                <img style="border-radius: 50%;" width="40px" height="40px" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>-->
+<!--            </li>-->
+<!--            <li class="list-group-item" th:if="${completed_paths == null}"><i class="bi bi-info-square me-3"></i>You have not completed any paths. To earn path badges, complete the exercises in the path.</li>-->
+<!--        </ul>-->
+
+<!--        <th:block th:if="${user.followed_paths.isEmpty()}">-->
+<!--            <i class="bi bi-info-square me-4"></i>You are not following any paths, would you like to <a href="/allPaths">search</a> for one?-->
+<!--        </th:block>-->
+<!--    </div>-->
+
+    <div class="list-group" th:if="${!completed_paths.isEmpty()}">
+        <h4 class="mt-3">Earned Badges</h4>
+
+        <a href="#" class="list-group-item list-group-item-action" aria-current="true" th:each="item : ${completed_paths}">
+            <div class="d-flex justify-content-center">
+                <img class="img img-thumbnail" style="border-radius: 50%;" th:src="'data:image/jpeg;base64,'+${item.imageDataUrl}"/>
+            </div>
+            <div class="d-flex w-100 justify-content-center">
+                <h5 class="mb-1" th:text="${item.title}"></h5>
+<!--                <small th:text="${item.description}"></small>-->
+            </div>
+<!--            <p class="mb-1">Some placeholder content in a paragraph.</p>-->
+<!--            <small>And some small print.</small>-->
+        </a>
+<!--        <a href="#" class="list-group-item list-group-item-action">-->
+<!--            <div class="d-flex w-100 justify-content-between">-->
+<!--                <h5 class="mb-1">List group item heading</h5>-->
+<!--                <small class="text-muted">3 days ago</small>-->
+<!--            </div>-->
+<!--            <p class="mb-1">Some placeholder content in a paragraph.</p>-->
+<!--            <small class="text-muted">And some muted small print.</small>-->
+<!--        </a>-->
+<!--        <a href="#" class="list-group-item list-group-item-action">-->
+<!--            <div class="d-flex w-100 justify-content-between">-->
+<!--                <h5 class="mb-1">List group item heading</h5>-->
+<!--                <small class="text-muted">3 days ago</small>-->
+<!--            </div>-->
+<!--            <p class="mb-1">Some placeholder content in a paragraph.</p>-->
+<!--            <small class="text-muted">And some muted small print.</small>-->
+<!--        </a>-->
     </div>
 
     <th:block th:replace="~{fragments/chat.html :: main_chat}"/>
