--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -72,7 +72,7 @@
     <!-- Create Goal Modal -->
     <div class="modal fade" id="createGoalModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <form th:action="@{users/goals/add}" method="post" th:object="${goal}">
+            <form th:action="@{/users/goals/add}" method="post" th:object="${goal}">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="exampleModalLabel">Create a Goal</h1>
