added following paths and earning badges

--- a/src/main/resources/templates/users/goals.html
+++ b/src/main/resources/templates/users/goals.html
@@ -145,7 +145,7 @@
 <!--                        </div>-->
 
                         <div class="form-check">
-                            <input th:field="*{completed}" th:value="${goal.completed}" class="form-check-input" type="checkbox" id="editCompleted">
+                            <input th:field="*{completed}" th:value="${goal.completed}" name="goalCompleted" class="form-check-input" type="checkbox" id="editCompleted">
                             <label class="form-check-label" for="editCompleted">
                                 Complete
                             </label>
