--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -87,9 +87,9 @@
 
 <div class="container my-5">
   <div class="column" style="border-radius: 10px;">
-    <div class="row d-flex justify-content-center" th:text="${param.error != null ? 'Oops. There was an error logging in.' : ''}"/>
-    <div class="row d-flex justify-content-center" th:text="${param.logout != null ? 'You have logged out.' : ''}"/>
-    <div class="row d-flex justify-content-center" sec:authorize="isAuthenticated()" th:text="${param.logout == null && param.error == null ? 'You are logged in.' : ''}">
+    <div class="row d-flex justify-content-center bg-light p-3" th:if="${param.error}" th:text="${param.error != null ? 'Oops. There was an error logging in.' : ''}"/>
+    <div class="row d-flex justify-content-center bg-light p-3" th:if="${param.logout}" th:text="${param.logout != null ? 'You have logged out.' : ''}"/>
+    <div class="row d-flex justify-content-center bg-light p-3" sec:authorize="isAuthenticated()" th:text="${param.logout == null && param.error == null ? 'You are logged in.' : ''}">
     </div>
     <a href="/admin/landing" sec:authorize="isAuthenticated()"><button>Go To Profile</button></a>
 
@@ -101,7 +101,7 @@
 
       <!-- Form Side -->
       <div class="col-lg-6 m-0 shadow d-flex justify-content-center align-items-center">
-        <form class="d-flex justify-content-center align-items-center m-0 p-4 rounded" style="width: 100%" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
+        <form name="loginForm" class="d-flex justify-content-center align-items-center m-0 p-4 rounded" style="width: 100%" sec:authorize="!isAuthenticated()" th:action="@{/login}" th:method="post">
           <div class="card m-0" style="width: 100%;">
             <div class="card-body m-0">
               <div class="card-text">
@@ -115,10 +115,10 @@
                 </div>
               </div>
               <div class="text-center">
-                <button type="submit" class="btn submitBtn" style="width: 100%;">Login</button>
+                <button type="submit" class="btn submitBtn" id="login" style="width: 100%;">Login</button>
               </div>
               <div class="text-center mt-2">
-                <a href="/recover"><button type="button" class="btn submitBtn" style="width: 100%;">Recover Account</button></a>
+                <a href="/recover"><button type="button" class="btn submitBtn"  style="width: 100%;">Recover Account</button></a>
               </div>
               <br>
               <div class="row mt-5">
@@ -141,6 +141,18 @@
 </div>
 
 <script>
+  const username = document.getElementById("username")
+  const password = document.getElementById("password")
+  //form validation
+  document.getElementById("login").onclick = (e)=> {
+    e.preventDefault()
+    if (username.value.length > 0 && password.value.length> 0) {
+     document.forms["loginForm"].submit()
+    }
+    else {
+      alert("Please check your input, and try again.")
+    }
+  }
   document.getElementById("regBtn").onclick = (e)=> {
     e.preventDefault()
     window.location.href="/register"
